# what-was-said

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
docs/: DEVELOPMENT.md
examples/: README.md  config.toml
examples/inbox/email/: 20260112_09-32-11.txt  20260116_13-39-33.txt  20260219_18-00-20.txt  20260306_12-01-59.txt  20260307_14-42-04.txt  20260310_11-11-21.txt  20260406_18-55-51.txt
examples/inbox/markdown/: 20260101_00-00-00.md  20260401_17-01-59.md  20260407_12-34-33.md
examples/inbox/slack/: 20260326_15-49-00.txt  20260401_18-01-00.txt  20260402_09-12-00.txt  20260403_10-03-00.txt  20260404_14-11-00.txt  20260404_14-19-31.txt  20260405_07-41-00.txt  20260407_15-42-00.txt  20260407_17-02-08.txt
examples/parsers/: email_parser.py  slack_parser.py
src/: chunking.rs  config.rs  default_config.toml  default_tags.toml  derive.rs  diff.rs  embed.rs  extract.rs  ingest.rs  lib.rs  main.rs  markdown.rs  merge.rs  minhash.rs  openai.rs  projects.rs  prompts.rs  query.rs  serve.rs  storage.rs  sync.rs  tui.rs  types.rs  util.rs  whisper.rs
src/prompts/: segmentation.txt
src/storage/: derive.rs  documents.rs  embed.rs  mod.rs  search.rs  tags.rs
src/tui/: browse.rs  mod.rs  read.rs  render.rs  search.rs  summary.rs  tags.rs  theme.rs
src/tui/themes/: dracula.toml  gruvbox.toml  light.toml  nord.toml  solarized.toml
tests/: integration.rs
