[package]
name = "commonplace"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
ratatui = "0.28"
crossterm = "0.28"
termimad = "0.30"
arboard = "3"
anyhow = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
regex = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "5"
sqlite-vec = "0.1.6"
zerocopy = { version = "0.8", features = ["derive"] }
